--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,7 @@
         l'application promet d'améliorer la productivité et l'efficacité des équipes en centralisant les échanges, le suivi des tâches et le partage de fichiers. 
         La distribution des tâches entre les membres du groupe a permis une collaboration efficace, garantissant une réalisation de haute qualité. 
         Ce rapport détaille les technologies utilisées, les spécifications fonctionnelles et non-fonctionnelles, ainsi que la répartition des rôles dans le développement du projet.
+    \newpage
     \section{Contexte du Projet}
         \subsection{Introduction}
             Tout projet de développement logiciel réussi repose sur la collaboration entre les développeurs au sein d'une entreprise. Cela leur offre la possibilité de transmettre leurs connaissances, de repérer aisément les erreurs et de trouver des solutions plus novatrices. Les développeurs peuvent optimiser la répartition des différentes tâches et garantir une intégration adéquate de chaque partie du code avec le reste du projet. Cependant, afin que cette collaboration soit réellement fluide, il est nécessaire d'avoir quelque chose en place qui facilite naturellement la communication et la coordination. C'est à ce moment-là qu'une application web intervient. Ce genre d'outil regroupe les échanges, le suivi des tâches, le partage de fichiers et la gestion des versions de code en un seul endroit, de manière à ce que tous les utilisateurs puissent y accéder.
@@ -171,7 +172,7 @@
                     \caption{Diagramme de Classe}
                 \end{figure}
                 \FloatBarrier 
-
+            \newpage
             \subsubsection{Diagramme des Cas d'Utilisation}
                 \textbf{Diagramme des cas d'utilisation :} Tous les cas d'utilisation sont associés avec l'association d'inclusion « include » au cas d'utilisation « S'authentifier » :
                 
@@ -187,12 +188,12 @@
                 \textbf{Les événements :}
                 \begin{figure}[h!]
                     \centering
-                    \includegraphics[width=0.8\textwidth]{assets/diagrammes/jpg/Model2!UseCaseEvent_1.jpg}
+                    \includegraphics[width=0.6\textwidth]{assets/diagrammes/jpg/Model2!UseCaseEvent_1.jpg}
                     \caption{Diagramme des cas d'utilisation - Événement}
                 \end{figure}
                 
                 \FloatBarrier
-                
+                \newpage
                 \textbf{La base de connaissances :}
                 \begin{figure}[h!]
                     \centering
@@ -210,14 +211,13 @@
                 \end{figure}
                 
                 \FloatBarrier
-                
+                \newpage
                 \textbf{Profil collaborateur :}
                 \begin{figure}[h!]
                     \centering
                     \includegraphics[width=0.8\textwidth]{assets/diagrammes/jpg/Model5!UseCaseCollab_4.jpg}
                     \caption{Diagramme des cas d'utilisation - Collaboration}
                 \end{figure}
-                
                 \FloatBarrier
                 
                 \textbf{Les projets :}
@@ -227,7 +227,15 @@
                     \caption{Diagramme des cas d'utilisation - Projet}
                 \end{figure}
                 \FloatBarrier
-            
+                \newpage
+                \textbf{Les compétences :}
+                \begin{figure}[h!]
+                    \centering
+                    \includegraphics[width=0.8\textwidth]{assets/diagrammes/jpg/Model7!UseCaseSkills_6.jpg}
+                    \caption{Diagramme des cas d'utilisation - compétences}
+                \end{figure}
+                \FloatBarrier
+                \newpage
             \subsubsection{Diagramme d'États-Transitions}
                 \textbf{Pour les états d'une question :}
                 \begin{figure}[h!]
@@ -251,7 +259,7 @@
                 \caption{Diagramme de sequence - modifier une question}
             \end{figure}
             \FloatBarrier
-
+            \newpage
             \subsubsection{Diagramme d'Activité}
                 \begin{figure}[h!]
                     \centering
@@ -275,7 +283,7 @@
                 \subsubsection{Équipement logiciel}
                     \begin{table}[h!]
                         \centering
-                        \begin{tabular}{|m{2cm}|m{12cm}|}
+                        \begin{tabular}{|m{2cm}|m{15cm}|}
                             \hline
                             \includegraphics[width=2cm]{assets/logos/vscode.png} &
                             \textbf{Visual Studio Code} :
@@ -311,10 +319,11 @@
                         \caption{Équipement logiciel}
                     \end{table}
                 \FloatBarrier
+                \newpage
                 \subsubsection{Langages d'implémentation}
                     \begin{table}[h!]
                         \centering
-                        \begin{tabular}{|m{2cm}|m{12cm}|}
+                        \begin{tabular}{|m{2cm}|m{15cm}|}
                             \hline
                             \includegraphics[width=2cm]{assets/logos/PHP_logo.png} &
                             \textbf{PHP} :
@@ -329,7 +338,7 @@
                             \includegraphics[width=2cm]{assets/logos/html.jpg} &
                             \textbf{HTML} :
                             
-                            HTML (HyperText Markup Language) est un langage de balisage permettant d'écrire de l'hypertexte. HTML permet également de structurer sémantiquement et de mettre en forme le contenu des pages, d'inclure des ressources multimédias telles que des images, des formulaires, et des éléments programmables tels que des applets. Il permet de créer des documents interopérables avec des équipements très variés de manière conforme aux exigences de l'accessibilité du web. \\
+                            HTML (HyperText Markup Language) est un langage de balisage permettant d'écrire de l'hypertexte. HTML permet également de structurer sémantiquement et de mettre en forme le contenu des pages, d'inclure des ressources multimédias telles que des images, des formulaires, et des éléments programmables tels que des applets.\\
                             \hline
                             \includegraphics[width=2cm]{assets/logos/css.png} &
                             \textbf{CSS} :
@@ -343,12 +352,12 @@
                 \subsubsection{Frameworks et bibliothèques}
                     \begin{table}[h!]
                         \centering
-                        \begin{tabular}{|m{2cm}|m{12cm}|}
+                        \begin{tabular}{|m{2cm}|m{15cm}|}
                             \hline
                             \includegraphics[width=2cm]{assets/logos/OIP (1).jpg} &
                             \textbf{Bootstrap} :
                             
-                            Bootstrap est une collection d'outils utiles à la création du design (graphisme, animation et interactions avec la page dans le navigateur, etc.) de sites et d'applications web. C'est un ensemble qui contient des codes HTML et CSS, des formulaires, boutons, outils de navigation et autres éléments interactifs, ainsi que des extensions JavaScript en option. \\
+                            Bootstrap est une collection d'outils utiles à la création du design (graphisme, animation et interactions avec la page dans le navigateur, etc.) de sites et d'applications web.\\
                             \hline
                             \includegraphics[width=2cm]{assets/logos/jq.png} &
                             \textbf{JQuery} :
@@ -358,7 +367,7 @@
                             \includegraphics[width=2cm]{assets/logos/ajax.png} &
                             \textbf{AJAX} :
                             
-                            AJAX est une architecture logicielle permettant de créer des pages et des applications web capables d'interagir avec l'utilisateur et/ou d'autres applications sans qu'il soit nécessaire de recharger cette page dans le navigateur web du poste client. AJAX s'appuie sur des technologies présentes dans les différents navigateurs web, dont JavaScript (JS) et XML. \\
+                            AJAX est une architecture logicielle permettant de créer des pages et des applications web capables d'interagir avec l'utilisateur et/ou d'autres applications sans qu'il soit nécessaire de recharger cette page dans le navigateur web du poste client.\\
                             \hline
                         \end{tabular}
                         \caption{Frameworks et bibliothèques}
@@ -407,6 +416,7 @@
                     \caption{Page de profil}
                 \end{figure}
                 \FloatBarrier
+                \newpage
             \subsubsection{Page de modification du profil}
                 Depuis le profil et en cliquant sur un simple bouton, le collaborateur est redirigé vers une page où il peut modifier la totalité des informations de son profil.
                 \begin{figure}[h!]
@@ -437,26 +447,53 @@
                     \caption{Recherche}
                 \end{figure}
                 \FloatBarrier 
+                \newpage
+                Dans cette page le collaborateur peut aussi confirmer la participation a une formation, en cliquant sur le bouton :
+                \begin{figure}[h!]
+                    \centering
+                    \begin{minipage}{0.45\textwidth}
+                        \centering
+                        \includegraphics[width=0.8\linewidth]{assets/webSite/notInterested.png}
+                        \caption{collaborateur non interresser}
+                    \end{minipage}
+                    \hfill
+                    \begin{minipage}{0.45\textwidth}
+                        \centering
+                        \includegraphics[width=0.8\linewidth]{assets/webSite/interested.png}
+                        \caption{collaborateur interesser}
+                    \end{minipage}
+                \end{figure}
+                \FloatBarrier
+
+                Cas ou il y a un autre collaborateur qui s'intéresse a votre formation ou évènement, ou bien si votre question atteint 5 réponse, vous recevez une notification de cette manière : 
+                \begin{figure}[h!]
+                    \centering
+                    \includegraphics[width=0.5\linewidth]{assets//webSite/notification.png}
+                    \caption{Notifications}
+                \end{figure}
+                \FloatBarrier
+                \newpage
             \subsubsection{Page des connaissances}
                 Le collaborateur peut accéder aussi à cet espace dédié aux connaissances, qui sont partagées soit par lui-même soit par un autre collaborateur. Il peut également ajouter des connaissances et les partager avec d'autres collaborateurs. La barre à gauche a pour but de simplifier la navigation.
                 \begin{figure}[h!]
                     \centering
-                    \includegraphics[width=0.7\textwidth]{assets/webSite/base-de-connaissance.png}
+                    \includegraphics[width=0.6\textwidth]{assets/webSite/base-de-connaissance.png}
                     \caption{Page des connaissances}
                 \end{figure}
                 \FloatBarrier
                 Pour ne pas charger la page des connaissances à chaque fois qu'un utilisateur y accède, aucune connaissance n'est affichée sauf si le collaborateur clique sur le bouton `voir détails`. On affiche seulement les informations qui aident à identifier la connaissance au début.
                 \begin{figure}[h!]
                     \centering
-                    \includegraphics[width=0.7\textwidth]{assets/webSite/base-de-connaissance_demo.png}
+                    \includegraphics[width=0.6\textwidth]{assets/webSite/base-de-connaissance_demo.png}
                     \caption{Détails des connaissances}
                 \end{figure}
                 \FloatBarrier
+                \newpage
             \subsubsection{Page des projets}
                 Voici la page des projets, où le collaborateur peut consulter les projets en cours.
                 \begin{figure}[h!]
                     \centering
-                    \includegraphics[width=0.8\textwidth]{assets/webSite/projectsPage.png}
+                    \includegraphics[width=0.5\textwidth]{assets/webSite/projectsPage.png}
                     \caption{Page des projets}
                 \end{figure}
                 \FloatBarrier
@@ -468,6 +505,7 @@
                             \caption{Page d'accueil}
                         \end{figure}
                         \FloatBarrier
+                        \newpage
                     \subsubsection{Espace d'administration}
                         Dédié aux administrateurs, cet espace permet de modifier, superviser et ajouter les :
                         \begin{itemize}
@@ -483,6 +521,7 @@
                             \caption{Espace d'administration}
                         \end{figure}
                         \FloatBarrier
+                        \newpage
                     \subsubsection{Page de modification du profil}
                         L'administrateur peut modifier le profil de son compte.
                         \begin{figure}[h!]
@@ -491,6 +530,7 @@
                             \caption{Page de modification du profil}
                         \end{figure}
                         \FloatBarrier
+                        \newpage
                     \subsubsection{Dashboard}
                         L'administrateur peut consulter les statistiques des collaborateurs, projets et questions, ainsi que les demandes d'adhésion.
                         \begin{figure}[h!]
@@ -499,7 +539,7 @@
                             \caption{Dashboard}
                         \end{figure}
                         \FloatBarrier
-        
+                        \newpage
     \section{Conclusion}
         En conclusion, ce projet a permis de créer une application web robuste et efficace, répondant aux besoins de communication et de collaboration des entreprises. 
         Grâce à l'utilisation des technologies appropriées et à une conception bien définie, l'application facilite les échanges d'informations, le partage de connaissances et le support technique, 
