figures in frensh

--- a/main.tex
+++ b/main.tex
@@ -15,11 +15,15 @@
 \usepackage{titlesec}
 \usepackage{geometry}
 \usepackage{placeins}
-
+\renewcommand{\contentsname}{Sommaire}
+\renewcommand{\listfigurename}{Liste des Figures}
+\renewcommand{\listtablename}{Liste des Tableaux}
 \geometry{a4paper, margin=1in}
+\title{Rapport de Projet}
+\author{AMKASSOU Ayman, CHROQUI Hamza, HERAK Mohammed}
+
 
 \begin{document}
-
     \setcounter{page}{2} 
     \tableofcontents
     \newpage
@@ -174,9 +178,9 @@
                 \FloatBarrier 
             \newpage
             \subsubsection{Diagramme des Cas d'Utilisation}
-                \textbf{Diagramme des cas d'utilisation :} Tous les cas d'utilisation sont associés avec l'association d'inclusion « include » au cas d'utilisation « S'authentifier » :
+                \textbf{Diagramme des cas d'utilisation:} Tous les cas d'utilisation sont associés avec l'association d'inclusion « include » au cas d'utilisation « S'authentifier » :
                 
-                \textbf{Pour les questions :}
+                \textbf{Pour les questions:}
                 \begin{figure}[h!]
                     \centering
                     \includegraphics[width=0.8\textwidth]{assets/diagrammes/jpg/Model1!useCaseQuestion_0.jpg}
@@ -185,7 +189,7 @@
                 
                 \FloatBarrier
                 
-                \textbf{Les événements :}
+                \textbf{Les événements:}
                 \begin{figure}[h!]
                     \centering
                     \includegraphics[width=0.6\textwidth]{assets/diagrammes/jpg/Model2!UseCaseEvent_1.jpg}
@@ -194,7 +198,7 @@
                 
                 \FloatBarrier
                 \newpage
-                \textbf{La base de connaissances :}
+                \textbf{La base de connaissances:}
                 \begin{figure}[h!]
                     \centering
                     \includegraphics[width=0.8\textwidth]{assets/diagrammes/jpg/Model3!UseCaseDoc_2.jpg}
@@ -203,7 +207,7 @@
                 
                 \FloatBarrier
                 
-                \textbf{Les formations :}
+                \textbf{Les formations:}
                 \begin{figure}[h!]
                     \centering
                     \includegraphics[width=0.8\textwidth]{assets/diagrammes/jpg/Model4!UseCaseFormation_3.jpg}
@@ -212,7 +216,7 @@
                 
                 \FloatBarrier
                 \newpage
-                \textbf{Profil collaborateur :}
+                \textbf{Profil collaborateur:}
                 \begin{figure}[h!]
                     \centering
                     \includegraphics[width=0.8\textwidth]{assets/diagrammes/jpg/Model5!UseCaseCollab_4.jpg}
@@ -220,7 +224,7 @@
                 \end{figure}
                 \FloatBarrier
                 
-                \textbf{Les projets :}
+                \textbf{Les projets:}
                 \begin{figure}[h!]
                     \centering
                     \includegraphics[width=0.8\textwidth]{assets/diagrammes/jpg/Model6!UseCaseProject_5.jpg}
@@ -228,7 +232,7 @@
                 \end{figure}
                 \FloatBarrier
                 \newpage
-                \textbf{Les compétences :}
+                \textbf{Les compétences:}
                 \begin{figure}[h!]
                     \centering
                     \includegraphics[width=0.8\textwidth]{assets/diagrammes/jpg/Model7!UseCaseSkills_6.jpg}
@@ -237,14 +241,14 @@
                 \FloatBarrier
                 \newpage
             \subsubsection{Diagramme d'États-Transitions}
-                \textbf{Pour les états d'une question :}
+                \textbf{Pour les états d'une question:}
                 \begin{figure}[h!]
                     \centering
                     \includegraphics[width=0.8\textwidth]{assets/diagrammes/jpg/StateMachine1!Question_0.jpg}
                     \caption{Diagramme d'États-Transitions - Question}
                 \end{figure}
                 \FloatBarrier
-                \textbf{Pour les états d'une formation :}
+                \textbf{Pour les états d'une formation:}
                 \begin{figure}[h!]
                     \centering
                     \includegraphics[width=0.8\textwidth]{assets/diagrammes/jpg/StateMachine2!Formation_1.jpg}
