--- a/main.tex
+++ b/main.tex
@@ -15,9 +15,11 @@
 \usepackage{titlesec}
 \usepackage{geometry}
 \usepackage{placeins}
+
 \renewcommand{\contentsname}{Sommaire}
 \renewcommand{\listfigurename}{Liste des Figures}
 \renewcommand{\listtablename}{Liste des Tableaux}
+
 \geometry{a4paper, margin=1in}
 \title{Rapport de Projet}
 \author{AMKASSOU Ayman, CHROQUI Hamza, HERAK Mohammed}
@@ -62,7 +64,7 @@
         \subsection{Distribution des Tâches}
             Aucune tâche n'a été réalisée par un seul membre du groupe. Le travail est dédié à tous les membres du groupe, et chaque tâche est vérifiée par tous les membres du groupe. Cette distribution concerne la réalisation initiale de la tâche (premier commit), puis on améliore cette dernière si nécessaire. \newline
             Si la partie (backend ou frontend) n'est pas spécifiée, le membre du groupe travaille sur les deux parties. \newline
-            \begin{table}[h!]
+            \begin{table}[!ht]
                 \centering
                 \begin{tabular}{|l|l|}
                     \hline
