final commit once again hh

--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,7 @@
         La distribution des tâches entre les membres du groupe a permis une collaboration efficace, garantissant une réalisation de haute qualité. 
         Ce rapport détaille les technologies utilisées, les spécifications fonctionnelles et non-fonctionnelles, ainsi que la répartition des rôles dans le développement du projet.
     \newpage
+    
     \section{Contexte du Projet}
         \subsection{Introduction}
             Tout projet de développement logiciel réussi repose sur la collaboration entre les développeurs au sein d'une entreprise. Cela leur offre la possibilité de transmettre leurs connaissances, de repérer aisément les erreurs et de trouver des solutions plus novatrices. Les développeurs peuvent optimiser la répartition des différentes tâches et garantir une intégration adéquate de chaque partie du code avec le reste du projet. Cependant, afin que cette collaboration soit réellement fluide, il est nécessaire d'avoir quelque chose en place qui facilite naturellement la communication et la coordination. C'est à ce moment-là qu'une application web intervient. Ce genre d'outil regroupe les échanges, le suivi des tâches, le partage de fichiers et la gestion des versions de code en un seul endroit, de manière à ce que tous les utilisateurs puissent y accéder.
@@ -85,7 +86,9 @@
                     Diagramme d'activité (HERAK) \\
                     \hline
                     Réalisation &
-                    BDD, profils (frontend), système de notification, système des états des questions, \\
+                    BDD, profils (frontend),profils Admin (backend) système de notification, \\
+                                &
+                    système des états des questions, \\
                                 &
                     Modération des questions (AMKASSOU). \\
                                 &
@@ -93,7 +96,7 @@
                                 &
                     aux formations et annonces, like et dislike, \\
                                 &
-                    gestion profil admin (backend), recherche et système des états des formations (CHROQUI). \\
+                    recherche et système des états des formations (CHROQUI). \\
                                 &
                     Pages des projets, événements, base de connaissances, formations, \\
                                 &
@@ -284,8 +287,7 @@
     \section{Réalisation}
         \subsection{Introduction}
             Dans cette partie, nous allons présenter la réalisation du projet, avec les technologies, logiciels et bibliothèques utilisées.
-        \subsection{Outils de développement}
-                
+        \subsection{Outils de développement}    
                 \subsubsection{Équipement logiciel}
                     \begin{table}[h!]
                         \centering
@@ -546,6 +548,7 @@
                         \end{figure}
                         \FloatBarrier
                         \newpage
+    
     \section{Conclusion}
         En conclusion, ce projet a permis de créer une application web robuste et efficace, répondant aux besoins de communication et de collaboration des entreprises. 
         Grâce à l'utilisation des technologies appropriées et à une conception bien définie, l'application facilite les échanges d'informations, le partage de connaissances et le support technique, 
