--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,8 @@
 \usepackage{titlesec}
 \usepackage{geometry}
 \usepackage{placeins}
+\usepackage[colorlinks=true, linkcolor=blue]{hyperref}
+
 
 \renewcommand{\contentsname}{Sommaire}
 \renewcommand{\listfigurename}{Liste des Figures}
@@ -555,4 +557,8 @@
         contribuant ainsi à améliorer la productivité et l'efficacité des équipes. La gestion des formations et des profils des employés offre une meilleure organisation et un suivi rigoureux des compétences. 
         La collaboration entre les membres du groupe, ainsi que la répartition claire des tâches, ont été essentielles pour la réussite de ce projet. 
         Cette application web représente un outil indispensable pour toute entreprise cherchant à optimiser ses processus internes et à renforcer la collaboration entre ses employés.
+
+    \section{Code source}
+        Le code source de ce projet est disponible sur GitHub à l'adresse suivante: \href{https://github.com/MedHK008/collaboration-Platform}{Collab-Platform Code source}.
+        Le code source de ce rapport: \href{https://github.com/MedHK008/Rapport}{Rapport}.
 \end{document}
